2008-03-26  Inge Wallin  <inge@lysator.liu.se>

	Remove some unneeded members.
	* src/lib/MeasureTool.h (m_visibleArea, m_centerLat, m_centerLon,
	m_radius): remove

	Fix repetition of drawing of the measure tool in some
	projections. Also change some function names.
	* src/lib/MeasureTool.cpp (drawDistancePath): Draw repetition
	(paintMeasurePoints)      -> paint
	(paintDistancePoints)     -> drawDistancePoints
	(paintMark)               -> drawMark
	(paintTotalDistanceLabel) -> drawTotalDistanceLabel
	(testbug)                 -> testBug
	* src/lib/MarbleMap.cpp (doPaint): call paint() instead of old name

2008-03-25  Torsten Rahn  <rahn@kde.org>

    * src/lib/global.h:
    - introducing several enums which are needed for settings. 
    (DistanceUnit, AngleUnit, MapQuality, LabelLocalization, 
     etc.)

    * src/marble_part.{cpp,h}:
    * src/lib/MarbleControlBox.ui:
    * src/lib/geodata/data/GeoDataPoint.h:
    * src/marble.kcfg:
    * src/marble_part.h:
    * src/ControlView.h:
    * src/settings.kcfgc:

    - kcfg-izing the settings. 
    - Making the volatileTileCacheLimit setting work.

    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/MarbleMap.{cpp,h}:
    * src/lib/TileLoader.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:

    - fixed wrong assumption that the cache is measured in bytes
      internally. Just like QPixmapCache it gets measured 
      in kiloBytes instead. Beware: the UI specifies things in
      MegaByte.

    * src/lib/MarbleViewSettingsWidget.ui:
    * src/lib/MarbleNavigationSettingsWidget.ui:
    * src/lib/MarbleCacheSettingsWidget.ui:

    - Splitted up the settings ui and kcfg-ized it.
    - made some strings more user readable.

2008-03-19  Inge Wallin  <inge@lysator.liu.se>

	Get rid of unnecessary member
	* src/lib/VectorMap.{h,cpp}: Remove unnecessary member m_imgradius

	Get rid of unnecessary members.
	* src/lib/VectorMap.{h,cpp}: Remove unnecessary members
	m_rad2Pixel, m_planetAxis and make them local variables instead.
